--- a/css assignment/styles.css
+++ b/css assignment/styles.css
@@ -13,11 +13,11 @@ nav {
   position: sticky;
   top: 0;
   width: 100%;
-  height: 8%;
+  height: 4.5%;
   background-color: powderblue;
   display: inline-block;
   margin: 0;
-  padding: 0;
+  padding: 10px;
 }
 
 nav > a {
@@ -47,10 +47,25 @@ nav > a {
     margin: 5% 20%;
 }
 
+.flex-container {
+  display: flex;
+  border: 3px solid bisque;
+  height: 100vh;
+  flex-wrap: wrap;
+  margin: 5% 18.2%;
+  align-items: center;
+}
+.imge {
+    height: 200px;
+    width: 300px;
+    margin: 10px;
+}
+
 .heading {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 600;
     padding: 20px;
+    display: block;
 }
 .para {
     margin-left: 20px;
@@ -79,7 +94,3 @@ nav > a {
 
 }
 
-.imge {
-    height: 500px;
-    width: 800px;
-}
