--- a/css assignment/styles.css
+++ b/css assignment/styles.css
@@ -9,15 +9,16 @@ html {
 }
 
 
+
 nav {
-  position: sticky;
+  display: flex;
   top: 0;
   width: 100%;
-  height: 4.5%;
+  height: 7%;
   background-color: powderblue;
-  display: inline-block;
+  /* display: inline-block; */
   margin: 0;
-  padding: 10px;
+  padding: 0;
 }
 
 nav > a {
@@ -33,17 +34,20 @@ nav > a {
     font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
     text-align: center;
+    margin: 0;
+    padding: 2% 0 0 0;
 }
 
 .container1 {
     background-image: url("imgaes/img1.jpg");
     background-size: 100%;
+    
     height: 100%;
     width: 100%;
 }
 .container {
     background-size: 80%;
-    border: 1px solid bisque;
+    border: 3px solid bisque;
     margin: 5% 20%;
 }
 
@@ -91,6 +95,28 @@ nav > a {
     font-size: 25px;
     font-weight: 400px;
     padding: 20px;
-
 }
+
+/* for Gallery page responsiveness */
+
+.size {
+    display: flex;
+    flex-flow: row wrap;
+    list-style: none;
+}
+  
+.item {
+    height: 35vh;
+    flex-grow: 1;
+    margin: 1%;
+  }
+  
+img {
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+}
+  
+  
 
